# betfinder

./: .dockerignore  .gitignore  BetFinderApp.spec  Dockerfile  README.md  README_BUILD.md  SECURITY_ASSESSMENT.md  TASKS.md  build_installer.py  build_tray.py  check_sample.py  check_selections.py  docker-compose.yml  fix_dashboard.py  main.py  mkdocs.yml  pyproject.toml  sample.env  tray_app.py
.agent/rules/: production-ready-code.md
.github/workflows/: build_app.yaml  build_legacy_mac.yaml  deploy.yml
alembic/: env.py
alembic/versions/: 050daaeb1ec1_initial_migration.py  1af73727a616_add_result_to_odds.py  49ba1e6c39ff_add_popular_to_league.py  71fd1f9eae55_add_presets_advanced_filters.py  792570d62379_add_bet_delay_seconds_to_bookmaker.py  7a9ddf292152_add_extended_odds_fields.py  7b06fb53ae5f_add_external_name_to_mapping.py  826f453b42c8_remove_potential_payout.py  8adc565a7612_add_other_config_to_preset.py  8daa91083b94_add_last_sync_at_to_preset.py  96715a2531cb_rename_show_all_leagues_to_show_popular_.py  a2500c1b2e59_add_preset_hidden_items.py  a9f9345d05ea_add_min_probability_and_max_probability_.py  b4201c32630d_add_bet_snapshots.py  (+9 more)
app/: main.py
docs/: bet_history.md  index.md
scripts/: build_mac.sh  check_epl.py  check_event_sid.py  check_league_matches.py  fix_sx_bet_config.py  start.sh  test_event_fuzzy_matching.py  test_market_types.py  test_sx_bet_odds.py  verify_balance_logic.py  verify_ingestion_logic.py  verify_matching.py  verify_odds_update.py  verify_smart_matching_e2e.py  verify_sx_bet.py  verify_sx_bet_mapping.py
tests/: verify.py
(+71 files in other folders)
